# PyLog

./: README.md  generate_connection.sh  log_generator.py
clarity_challenge_v1.0/: setup.cfg
clarity_challenge_v1.0/clarity/app/: app.py
clarity_challenge_v1.0/clarity/facade/: clarity_challenge_facade.py
clarity_challenge_v1.0/docs/clarity/app/: index.html
clarity_challenge_v1.0/docs/clarity/facade/: index.html
docs/clarity/: app.html  index.html
docs/clarity/app/: app.html
docs/clarity/facade/: clarity_challenge_facade.html
docs/clarity/logfile/: log_file.html
docs/clarity/logline/: index.html  log_line.html
pylog/: README.md
pylog/clarity/logline/: log_line.py
pylog/docs/clarity/: index.html
pylog/docs/clarity/facade/: clarity_challenge_facade.html
pylog/docs/clarity/logfile/: index.html
tests/: log_generator.py
