[metadata]
name = somareto2
version = 1.0
author = Omar Alvarez Fres
author_email = omar.fres@gmail.com
description = Package for Clarity challenge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/O-Swad/clarity-challenge
project_urls =
    Documentation = https://o-swad.github.io/clarity-challenge/docs/clarity/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/clarity
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src/clarity
